<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history_icon"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_messaging"
        android:icon="@drawable/messaging_icon"
...
