<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="edu.sjsu.team408.parkhere.HomeFragment">

    <TextView
        android:id="@+id/searchLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:text="@string/searchParking"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/searchTermLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/locationSearchTerm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/currentLocation"
            android:inputType="textPostalAddress" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/searchDateLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/searchDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:focusable="false"
            android:inputType="date"
            android:hint="@string/dateSample" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/searchStartTimeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Time"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/searchTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:focusable="false"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/profile_item_margin"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/searchInMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/fab_margin"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/Search_in_map"
            android:padding="@dimen/fab_margin"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold" />

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/Search"
            android:padding="@dimen/fab_margin"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>
