<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sjsu.team408.parkhere.NewListingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/listingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listingParkingLabel"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pickParkingSpacePrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/pickParkingSpace"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:id="@+id/newListingParkingSpinner"/>

        <ImageView
            android:id="@+id/listingPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@mipmap/default_parking_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listingOwnerLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/owner"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listingOwner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/streetAddress"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listingAddressStreetNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listingAddressCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listingAddressState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zipCode"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/listingAddressZipCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listingPriceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/listingPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/priceSample"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listingStartDateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startDate"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/listingStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/dateSample"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listingEndDateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/endDate"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/listingEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/dateSample"
                android:focusable="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listingStartTimeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/startTime"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/listingStartTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/sampleTime"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/listingEndTimeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/endTime"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/listingEndTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/sampleTime"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_item_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/specialInstruction"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/listingSpecialInstructions"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/specialInstructionHint" />

        </LinearLayout>

        <Button
            android:id="@+id/saveListingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/finish"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>
