...
                android:layout_height="wrap_content"
                android:layout_weight="3" />

        </LinearLayout>

        <Button
            android:id="@+id/newListingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/postListing" />

        <Button
...
